--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     image: mariadb
     restart: unless-stopped
     environment:
-      - MYSQL_DATABASE=${DB_DATABASE=wapp}
+      - MYSQL_DATABASE=${DB_DATABASE}
       - MYSQL_USERNAME=${DB_USER}
       - MYSQL_PASSWORD=${DB_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
