--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -11,7 +11,7 @@ COPY package.json package-lock.json ./
 RUN npm install
 
 # Copy the rest of the application code to the working directory
-COPY ./app .
+COPY . .
 
 # Expose the port the app runs on
 EXPOSE 3000
