--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     image: wapp:latest
     build:
-      context: .
+      context: ./app
     expose:
       - 3000
     restart: unless-stopped
